users current lock backend
