# server/application-server/src/main/java/de/tum/cit/aet/helios/environment/EnvironmentController.java
@@ -42,6 +42,12 @@ public class EnvironmentController {
     return ResponseEntity.ok(environments);
   }
 
+  @GetMapping("/user_locking")
+  public ResponseEntity<EnvironmentLockHistoryDto> getEnvironmentsByUserLocking() {
+    EnvironmentLockHistoryDto usersLock = environmentService.getUsersCurrentLock();
+    return ResponseEntity.ok(usersLock);
+  }
+
   @PutMapping("/{id}/unlock")
   public ResponseEntity<?> unlockEnvironment(@PathVariable Long id) {
     try {
