# server/application-server/src/main/java/de/tum/cit/aet/helios/environment/EnvironmentLockHistoryRepository.java
@@ -15,4 +15,8 @@ public interface EnvironmentLockHistoryRepository
       Environment environment,
       String lockedBy
   );
+
+  EnvironmentLockHistory findTopByLockedByAndUnlockedAtIsNullOrderByLockedAtDesc(
+      String lockedBy
+  );
 }
